--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/material": "5.15.19",
     "@types/node": "16.18.97",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "bootstrap": "5.3.3",
     "react": "18.3.1",
-    "react-bootstrap": "2.10.2",
     "react-dom": "18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5"
